tolk-tester/tests/invalid-syntax/err-3967.tolk
int main() {
    
}

/**
@compilation_should_fail
@stderr expected top-level declaration, got `int`
*/
